--- a/assignments/assignment2.tex
+++ b/assignments/assignment2.tex
@@ -113,15 +113,15 @@
 	%%%%%%%   question 1, sub question (b)
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\subsection*{(b)}
-	The $i$th element of $x^TA$ is
+	The product of $x^TA$ is
 	\begin{equation}\label{xt_a}
-	[x^TA]_{i}=
+	\begin{split}
+	x^TA=
 	\left( 
-	\left(  
-	\begin{array}{c}  
-	x_1 \\
-	x_2 \\
-	\vdots \\
+	\begin{array}{cccc}  
+	x_1 &
+	x_2 &
+	\cdots &
 	x_n 
 	\end{array}
 	\right)
@@ -132,14 +132,18 @@
 	\cdots \\
 	a_{n1}, a_{n2},\cdots a_{nn} \\
 	\end{array}  
-	\right)  
-	\right)_{i}\\
-	=x_1a_{i1} + x_1a_{i1} + \cdots x_na_{in}
-	=\sum_{p=1}^n x_pa_{ip} 
+	\right)\\
+	=
+	\left( 
+	\begin{array}{cccc} 
+	\sum_{p=1}^n x_pa_{p1}, & \sum_{p=1}^n x_pa_{p2}, & \cdots & \sum_{p=1}^n x_pa_{pn} 
+	\end{array}  
+	\right)\\
+	\end{split}
 	\end{equation}
 	same principle, $x^TAx$'s product is
 	\begin{equation}\label{xt_a_x}
-	x^TAx = (\sum_{p=1}^n x_pa_{1p})x_1 + (\sum_{p=1}^n x_pa_{2p})x_2 + \cdots (\sum_{p=1}^n x_pa_{np})x_n
+	x^TAx = (\sum_{p=1}^n x_pa_{p1})x_1 + (\sum_{p=1}^n x_pa_{p2})x_2 + \cdots (\sum_{p=1}^n x_pa_{pn})x_n
 	= \sum_{p=1}^n \sum_{q=1}^n x_pa_{pq}x_q
 	\end{equation}
 	therefore the gradient of $x^TAx$ is
@@ -154,18 +158,18 @@
 	\end{array}
 	\right)
 	\end{equation}
-	take question (\ref{gradient_xtax})'s $i$th element for example, the $\frac{\partial(\sum_{p=1}^n \sum_{q=1}^n x_pa_{pq}x_qs)}{\partial x_n}$ contains one 2-order expression of $x_i$, that is ${x_i}^2a_{ii}$; and two 1-order expressions, they are $\sum_{p=1}^n x_pa_{pi}$ and $\sum_{q=1}^n x_qa_{iq}$, but both $q$ and $p$ cannot equals $i$.
+	take question (\ref{gradient_xtax})'s $i$th element for example, the $\frac{\partial(\sum_{p=1}^n \sum_{q=1}^n x_pa_{pq}x_q)}{\partial x_i}$ contains one 2-order expression of $x_i$, that is ${x_i}^2a_{ii}$; and two 1-order expressions, they are $\sum_{p} x_pa_{pi}$ and $\sum_{q} x_qa_{iq}$, where $q, p \in [1, n]$ and $p\neq q\neq i$.
 	\begin{equation}\label{gradient_xtax_i}
 	\frac{\partial(\sum_{p=1}^n \sum_{q=1}^n x_pa_{pq}x_q)}{\partial x_i} \\
 	=\frac{\partial(\sum_{p} x_ix_pa_{pi}+\sum_{q} x_ix_qa_{iq}+x_ix_ia_{ii})}{\partial x_i}
 	\end{equation}
 	, where $q, p \in [1, n]$ and $p\neq q\neq i$.
 	\\
-	since matrix $A$ is symmetrical, $a_{ij=a_{ji}}$, equation (\ref{gradient_xtax_i}) becomes
+	since matrix $A$ is symmetrical, $a_{ij}=a_{ji}$, equation (\ref{gradient_xtax_i}) becomes
 	\begin{equation}\label{gradient_xtax_i_mod}
 	\frac{\partial(\sum_{p} x_ix_pa_{pi}+\sum_{q} x_ix_qa_{iq}+x_ix_ia_{ii})}{\partial x_i}
 	=\frac{\partial(2\sum_{p} x_ix_pa_{pi}+x_i^2a_{ii})}{\partial x_i}
-	=2\sum_{p} x_ix_pa_{pi}+2x_ia_{ii}
+	=2\sum_{p} x_pa_{pi}+2x_ia_{ii}
 	\end{equation}
 	, where $p \in [1, n]$ and $p\neq i$.\\
 	Since $2x_ia_{ii}$ is the expression of $x_ix_pa_{pi}$ when $p=i$, we can get
@@ -189,7 +193,7 @@
 	=\nabla_x (Ax-b)^T(Ax-b)
 	=\nabla_x (Ax-b)^TI(Ax-b)
 	\end{equation}
-	According to the result of Q1(b) $\nabla_x(x^TAx)=2Ax$, we know,
+	According to the result of question 1(b) $\nabla_x(x^TAx)=2Ax$, plus chain rule, we know,
 	\begin{equation}\label{Ax-b_grad_2}
 	\nabla_x\lVert Ax-b\rVert_2^2
 	=\nabla_x (Ax-b)^TI(Ax-b)
@@ -230,6 +234,20 @@
 	\right)
 	\end{equation}
 	where $a_{ii}$ is $(i, i)$ the element of matrix $A$. It is also the diagonal element.
+	Therefore,
+	\begin{equation}\label{Ax-b_grad_2}
+	\nabla_x\lVert Ax-b\rVert_2^2
+	=\nabla_x (Ax-b)^TI(Ax-b)
+	=2(Ax-b)^T 
+	\left(  
+	\begin{array}{c}  
+	a_{11} \\
+	a_{22} \\
+	\vdots \\
+	a_{nn} \\
+	\end{array}
+	\right)
+	\end{equation}
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%%%%%%   question 3, sub question (a)
@@ -304,7 +322,7 @@
 	so the gradient of $A^TA$ respect to $A$ is
 	\begin{equation}\label{trAA_grad}
 	\begin{split}
-	\nabla_A(tr(AB))=&
+	\nabla_A(tr(A^TA))=&
 	\left(  
 	\begin{array}{cccc}
 	\frac{\partial\sum_{i=1}^n\sum_{j=1}^n a_{ij}^2}{\partial a_{11}} & \frac{\partial\sum_{i=1}^n\sum_{j=1}^n a_{ij}^2}{\partial a_{12}} \cdots \frac{\partial\sum_{i=1}^n\sum_{j=1}^n a_{ij}^2}{\partial a_{1n}}\\
@@ -349,12 +367,12 @@
 	\end{enumerate}
 	The definition of Frobenius norm is
 	\begin{equation}
-	\lVert A\rVert_F=\sqrt{\sum_{i=1}^m\sum_{j=1}^nA_{ij}^2}=\sqrt{tr(A^TA)}
+	\lVert A\rVert_F=\sqrt{\sum_{i=1}^n\sum_{j=1}^na_{ij}^2}=\sqrt{tr(A^TA)}
 	\end{equation}
 	\textbf{non-negativity}\\
 	since matrix is in real number space, $A_{ij}^2\geq 0$, so sum of each $A_{ij}^2$ must be greater or equal to 0, so as it's square root. So $\lVert A\rVert_F\geq 0$\\
 	\textbf{definiteness}\\
-	if $\sqrt{\sum_{i=1}^m\sum_{j=1}^nA_{ij}^2}=0$, $\sum_{i=1}^m\sum_{j=1}^nA_{ij}^2$ must be 0. And $A_{ij}$ must be 0. Thus, the matrix $A$ is null matrix.\\
+	if $\sqrt{\sum_{i=1}^m\sum_{j=1}^nA_{ij}^2}=0$, any single $A_{ij}$ must be 0. Thus, the matrix $A$ is null matrix.\\
 	So the conclusion, if and only if matrix $A$ is 0, it's Frobenius norm is 0.\\
 	\textbf{homogeneity}\\
 	The Frobenius norm of $tA$ (where $t$ is a constant) is 
@@ -383,7 +401,38 @@
 	%%%%%%   question 4, sub question (b)
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\subsection*{(b)}
-	due to the fact $\lVert A+B\rVert_F=tr(A^TA)$, we could have
+	According to the definition, $\lVert A^TA\rVert_F^2=\sum_{i=1}^n\sum_{j=1}^na_{ij}^2$.
+	While the $ii$th element of $A^TA$ is
+	
+	\begin{equation}\label{aTa}
+	\begin{split}
+	(A^TA)_{ii}=&
+	\left(  
+	\left(  
+	\begin{array}{cccc}
+	a_{11} & a_{21} & \cdots & a_{n1}\\
+	a_{12} & a_{22} & \cdots & a_{n2}\\
+	\vdots \\
+	a_{1n} & a_{2n} & \cdots & a_{nn}\\
+	\end{array}
+	\right)
+	\left(  
+	\begin{array}{cccc}
+	a_{11} & a_{12} & \cdots & a_{1n}\\
+	a_{21} & a_{22} & \cdots & a_{2n}\\
+	\vdots \\
+	a_{n1} & a_{n2} & \cdots & a_{nn}\\
+	\end{array}
+	\right)
+	\right)_{ii} \\
+	=\sum_{k=1}^n a^2_{ki}
+	\end{split}
+	\end{equation}
+	Therefore, the trace of $A^TA$ is 
+	\begin{equation}\label{trace_aTa}
+	tr(A^TA) = \sum_{i=1}^n (A^TA)_{ii}=\sum_{i=1}^n\sum_{k=1}^n a^2_{ki}
+	\end{equation}
+	So we can say $\lVert A^TA\rVert_F^2=tr(A^TA)$. And then
 	\begin{equation}\label{trAA_from}
 	\nabla_A(\lVert A\rVert_F^2)=\nabla_A(tr(A^TA))
 	\end{equation}
